syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.grpc.bistream";
option java_outer_classname = "Bistream";
option objc_class_prefix = "YINGMING";
package cn.yingming.grpc1;

// define the service..
service Communicate {
  rpc createConnection(stream StreamRequest) returns (stream StreamResponse) {
  }
  rpc ask(ReqAsk) returns (RepAsk) {
  }

}
// define the message type
message StreamRequest {
  // the default value of string is empty, and that of boolean is false.
  string source = 1;
  string name = 2;
  bool join = 3;
  string message = 4;
  string timestamp = 5;
  bool quit = 6;
}
message StreamResponse {
  string name = 1;
  string message = 2;
  string timestamp = 3;
  string addresses = 4;
}

//
message ReqAsk {
  string source = 1;
}
message RepAsk{
  bool survival = 1;
}